--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,7 +2,7 @@ name: Build Release APK
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 jobs:
   build:
@@ -19,11 +19,11 @@ jobs:
           java-version: '17'
           cache: 'gradle'
 
-      - name: Extract version from tag
+      - name: Extract version from release
         id: version
         run: |
-          VERSION_TAG=${GITHUB_REF#refs/tags/}
-          VERSION_NAME=${VERSION_TAG#v}
+          VERSION_TAG="${{ github.event.release.tag_name }}"
+          VERSION_NAME="${VERSION_TAG#v}"
           VERSION_CODE=${{ github.run_number }}
           echo "version_tag=$VERSION_TAG" >> $GITHUB_OUTPUT
           echo "version_name=$VERSION_NAME" >> $GITHUB_OUTPUT
