ci: Sign releases only when a keystore is provided

--- a/immich/build.gradle
+++ b/immich/build.gradle
@@ -28,19 +28,25 @@ android {
         buildConfigField 'String', 'IMMICH_AUTHORITY', '"' + authorityValue + '"'
     }
 
+    def keystorePath = System.getenv("KEYSTORE_FILE") ?: project.findProperty("KEYSTORE_FILE")
+
     signingConfigs {
-        release {
-            storeFile file(System.getenv("KEYSTORE_FILE") ?: project.findProperty("KEYSTORE_FILE") ?: "")
-            storePassword System.getenv("KEYSTORE_PASSWORD") ?: project.findProperty("KEYSTORE_PASSWORD")
-            keyAlias System.getenv("KEY_ALIAS") ?: project.findProperty("KEY_ALIAS")
-            keyPassword System.getenv("KEY_PASSWORD") ?: project.findProperty("KEY_PASSWORD")
+        if (keystorePath) {
+            release {
+                storeFile file(keystorePath)
+                storePassword System.getenv("KEYSTORE_PASSWORD") ?: project.findProperty("KEYSTORE_PASSWORD")
+                keyAlias System.getenv("KEY_ALIAS") ?: project.findProperty("KEY_ALIAS")
+                keyPassword System.getenv("KEY_PASSWORD") ?: project.findProperty("KEY_PASSWORD")
+            }
         }
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            signingConfig signingConfigs.release
+            if (keystorePath) {
+                signingConfig signingConfigs.release
+            }
         }
     }
 
